# drcctprof_tutorial

./: .gitignore  README.md  build.sh  build_clean.sh  run.sh
scripts/: clean_logs.sh  env_clean.sh  env_init.sh  make_tests.sh
src/: CMakeLists.txt  client.cpp
test_apps/: build.sh
test_apps/src/: test.c
